conf-template/envoy/envoy.yaml
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address: { address: 0.0.0.0, port_value: ${ENVOY_ADMIN_PORT} }

cluster_manager:
  outlier_detection:
    event_log_path: "/dev/stdout"

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: ${ENVOY_PORT} }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/dev/stdout"
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route: { cluster: service }
          http_filters:
          - name: envoy.filters.http.jwt_authn
            config:
              providers:
                jwt_provider:
                  issuer: "https://${KEYCLOAK_HOST}/auth/realms/${KEYCLOAK_REALM}"
                  remote_jwks:
                    http_uri:
                      uri: "https://${KEYCLOAK_HOST}/auth/realms/${KEYCLOAK_REALM}/protocol/openid-connect/certs"
                      cluster: auth
                    cache_duration:
                      seconds: 300
                  forward: true
              rules:
              - match:
                  prefix: /
                requires:
                  provider_and_audiences:
                    provider_name: jwt_provider
                    audiences:
                      ${KEYCLOAK_CLIENT}
          - name: envoy.router
  clusters:
  - name: service
    common_lb_config:
      healthy_panic_threshold:
        value: 0.0
    connect_timeout: 0.25s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts: [{ socket_address: { address: localhost, port_value: ${GRAPHDB_PERSONA_SCHEMA_LOADER_PORT} }}]
  - name: auth
    common_lb_config:
      healthy_panic_threshold:
        value: 0.0
    connect_timeout: 0.25s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts: [{ socket_address: { address: ${KEYCLOAK_HOST}, port_value: 443 }}]
    tls_context: { sni: ${KEYCLOAK_HOST} }
